# voyager

./: .gitignore  Cargo.toml  README.md
src/: database.rs  error.rs  lib.rs  log.rs  main.rs  normal.vsl  parser.rs  prelude.rs  serialized.lvl  server.rs  tests.rs
src/routers/: delete.rs  get.rs  mod.rs  post.rs  put.rs  teapot.rs
src/server/routers/: get.rs  levels.rs  mod.rs  post.rs  teapot.rs  upload.rs
src/utils/: level.rs  mod.rs  server.rs  tests.rs
src/utils/routers/: delete.rs  get.rs  mod.rs  post.rs  put.rs  teapot.rs
src/utils/webui/: ban.rs  delete.rs  index.rs  login.rs  mod.rs
templates/: index.html
