[package]
name = "voyager"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
base64 = "0.21.7"
bincode = "1.3.3"
dashmap = { version = "5.5.3", features = ["serde"] }
derive_more = "0.99.17"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
axum-test = "14.2.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
